# COSC342

Assignment/Assignment1/: CMakeLists.txt  featureMatching.cpp
Assignment/Assignment1/Images/Gardenrotation/: .gardenrotation4.JPG.icloud
Assignment/Assignment2/disparity/: CMakeLists.txt  disparity.cpp
Assignment/Assignment2/stereo/: CMakeLists.txt  CalibrationIO.cpp  calibration.txt  stereo.cpp
Lab01/HelloWorld/: CMakeLists.txt  hello.cpp
Lab01/OpenCVTest/: ocvTest.cpp
Lab01/drawing/: CMakeLists.txt  drawing.cpp
Lab02/Greyscale/: CMakeLists.txt  ocvTest.cpp
Lab02/Image transformations/: ocvTest.cpp
Lab03/Features/: CMakeLists.txt  features.cpp
Lab06/Calibration/Calibration/: CMakeLists.txt  CalibrationIO.cpp  CalibrationIO.h  stereoCalibration.cpp  stereoCalibration.txt
Lab07/stereo/: CMakeLists.txt  stereo.cpp
Lab09/OpenGLIntro2022/: CMakeLists.txt
Lab09/OpenGLIntro2022/Part01/: Part01  simpleWindow.cpp
Lab09/OpenGLIntro2022/Part02/: Part02  basicShader.frag  basicShader.vert  redTriangle.cpp
Lab09/OpenGLIntro2022/common/: Camera.cpp  Camera.hpp  Object.cpp  Object.hpp  Shader.cpp  Shader.hpp  Triangle.cpp  vboindexer.cpp
